# androidDemoApp

./: .gitignore  .gitmodules  README.md  gradle.properties  local.properties
.github/workflows/: main.yml
Application/: build.gradle
Application/src/main/: AndroidManifest.xml
Application/src/main/cpp/: CMakeLists.txt  ap-getters.cpp
Application/src/main/java/org/foldr/fcpp/androidDemo/: AP.java  AdvertiserFragment.java  AdvertiserService.java  BLEParameterFragment.java  Constants.java  MainActivity.java  ScanResultAdapter.java  ScannerFragment.java
Application/src/main/java/org/foldr/fcpp/androidDemo/evacuation1/: EvacuationActivity.java  EvacuationFragment.java  EvacuationParameters.java
Application/src/main/java/org/foldr/fcpp/androidDemo/friendfinding1/: FriendFindingActivity.java  FriendFindingFragment.java  FriendFindingParameters.java
Application/src/main/res/layout/: activity_evacuation_1_parameters.xml  activity_friendfinding_1_parameters.xml  activity_main.xml  fragment_advertiser.xml  fragment_ble_parameter.xml  fragment_evacuation.xml  fragment_friendfinding.xml
Application/src/main/res/values/: arrays.xml  base-strings.xml  dimens.xml  strings.xml  styles.xml
Application/src/main/res/values-v21/: base-colors.xml
Application/src/main/res/xml/: preferences.xml
fcpp-android/: CMakeLists.txt  Makefile  README.md
fcpp-android/lib/: ap-getters.cpp  configuration.cpp  configuration.hpp  driver.hpp
fcpp-android/lib/common/: template_remover.cpp  template_remover.hpp
fcpp-android/lib/coordination/: experiment_helper.cpp  experiment_helper.hpp  friend_finding.cpp  friend_finding.hpp  general.cpp  general.hpp  main.cpp  main.hpp  movement.cpp  movement.hpp  past_ctl.cpp  past_ctl.hpp  slcs.cpp  slcs.hpp  tracker.cpp  tracker.hpp  traitor_detection.cpp  traitor_detection.hpp  vulnerability_detection.cpp  vulnerability_detection.hpp
fcpp-android/run/: driver.hpp  main.cpp  main.hpp  simulation.cpp
fcpp-android/schemas/: evacuation.sql  friend_finding.sql
fcpp-android/src/: main.cpp  main.hpp
fcpp-android/test/common/: template_remover.cpp
fcpp-distribution/include/: main.hpp
gradle/wrapper/: gradle-wrapper.properties
